# syntect_test

./: Cargo.toml  README.md  build.rs  index.html
src/: main.rs
