[package]
edition = "2021"
name = "syntect-test"
version = "0.1.0"

[dependencies]
once_cell = "*"
instant = { version = "0.1", features = [ "wasm-bindgen" ] }
gloo-utils = "0.1.2"
web-sys = "0.3.56"
wasm-bindgen = "0.2.79"

[dependencies.syntect]
default-features = false
features = [ "parsing", "html", "plist-load", "yaml-load", "dump-load", "regex-fancy" ]
git = "https://github.com/trishume/syntect"

[dependencies.yew]
git = "https://github.com/yewstack/yew/"

[build-dependencies.syntect]
default-features = false
features = [ "parsing", "html", "plist-load", "yaml-load", "dump-create", "regex-fancy" ]
git = "https://github.com/trishume/syntect"

[profile.release]
lto = true
opt-level = 's'